akordiyon menü eklendi

--- a/SeyruSefer/SeyruSefer/App.config
+++ b/SeyruSefer/SeyruSefer/App.config
@@ -14,7 +14,7 @@
         <value>True</value>
       </setting>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value>Skin/Metropolis</value>
+        <value>Skin/The Bezier</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
