--- a/SeyruSefer/SeyruSefer/App.config
+++ b/SeyruSefer/SeyruSefer/App.config
@@ -17,7 +17,7 @@
         <value>Skin/The Bezier</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value></value>
+        <value>Twenty</value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -32,7 +32,7 @@
         <value></value>
       </setting>
       <setting name="RegisterUserSkins" serializeAs="String">
-        <value></value>
+        <value>True</value>
       </setting>
       <setting name="FontBehavior" serializeAs="String">
         <value></value>
