Listelemedeki koltuk kısmı yapıldı renkli simgeler ayarlandı fakat boş dolu rezervasyon diye ayrılacaklar koltuk 1 yerine 1 yazacak ve renkli icon olacak

--- a/SeyruSefer/SeyruSefer/SeyruSefer.csproj
+++ b/SeyruSefer/SeyruSefer/SeyruSefer.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
@@ -87,6 +88,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_60px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_60px2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_60px3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
